test/zinc_source/compile_errors/rust_interop/02_wrong_type.zn
// expected-error: call to extern 'max' parameter 'a' expects a compatible 'i64' value
extern rust {
    use std::cmp::max;

    fn max(a: i64, b: i64) -> i64;
}

fn main() {
    print(max("one", 2))
}
